@@ -1,1 +1,15 @@
-This is history.txt
+Early Releases
+
+Following the release of Ruby 0.95 in 1995, several stable versions of Ruby were released in the following years:
+
+Ruby 1.0: December 25, 1996
+Ruby 1.2: December 1998
+Ruby 1.4: August 1999
+Ruby 1.6: September 2000
+In 1997, the first article about Ruby was published on the Web. In the same year, Matsumoto was hired by netlab.jp to work on Ruby as a full-time developer.
+
+In 1998, the Ruby Application Archive was launched by Matsumoto, along with a simple English-language homepage for Ruby.
+
+In 1999, the first English language mailing list ruby-talk began, which signaled a growing interest in the language outside Japan.[22] In this same year, Matsumoto and Keiju Ishitsuka wrote the first book on Ruby, The Object-oriented Scripting Language Ruby (オブジェクト指向スクリプト言語 Ruby), which was published in Japan in October 1999. It would be followed in the early 2000s by around 20 books on Ruby published in Japanese.
+
+By 2000, Ruby was more popular than Python in Japan. In September 2000, the first English language book Programming Ruby was printed, which was later freely released to the public, further widening the adoption of Ruby amongst English speakers. In early 2002, the English-language ruby-talk mailing list was receiving more messages than the Japanese-language ruby-list, demonstrating Ruby's increasing popularity in the non-Japanese speaking world.
